# linking-bug-test

./: CMakeLists.txt  README.md  bar.cpp  foo.cpp  foo.h  main.cpp
